Add typographic families

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="" />
     <meta name="keywords" content="" />
-    <title>Hello World</title>
+    <title>Dunmer Name Generator for The Elder Scrolls</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Oswald:wght@400;600;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
@@ -23,7 +27,7 @@
           include Ashlander family names.
         </p>
         <div class="generatedNames">
-          <p>Generated names:</p>
+          <h2>Generated names:</h2>
           <ul id="names">
             <li>Loading names... consulting the libraries of pocrypha...</li>
           </ul>
