--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="" />
     <title>Dunmer Name Generator for The Elder Scrolls</title>
     <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Oswald:wght@400;600;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
       rel="stylesheet"
     />
   </head>
