Change form structure, loading message

--- a/src/index.html
+++ b/src/index.html
@@ -29,30 +29,22 @@
         <div class="generatedNames">
           <h2>Generated names:</h2>
           <ul id="names">
-            <li>Loading names... consulting the libraries of pocrypha...</li>
+            <li>Loading names... consulting the libraries of Apocrypha...</li>
           </ul>
         </div>
         <form class="options">
           <fieldset>
             <legend>Gender:</legend>
-            <input type="radio" id="options-gender-off" name="Off" checked="true" />
+            <input type="radio" id="options-gender-off" name="gender" checked="true" />
             <label for="options-gender-off">Off</label>
-            <input type="radio" id="options-gender-female" name="Feminine" value="female" />
+            <input type="radio" id="options-gender-female" name="gender" value="female" />
             <label for="options-gender-female">Feminine</label>
-            <input type="radio" id="options-gender-male" name="Masculine" value="male" />
+            <input type="radio" id="options-gender-male" name="gender" value="male" />
             <label for="options-gender-male">Masculine</label>
           </fieldset>
           <button type="button" id="generateNames">Re-Roll Names</button>
         </form>
       </main>
     </div>
-    <footer>
-      <div class="wrapper">
-        <p>
-          Made by Becky Pollard ☆
-          <a href="https://github.com/BeckyPollard/uesp-dumner-name-generator">GitHub</a>
-        </p>
-      </div>
-    </footer>
   </body>
 </html>
