Replace hexagon mixin with class

--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
             <input type="radio" id="options-gender-male" name="gender" value="male" />
             <label for="options-gender-male">Masculine</label>
           </fieldset>
-          <button type="button" id="generateNames">Re-Roll Names</button>
+          <button type="button" id="generateNames" class="hexagon">Re-Roll Names</button>
         </form>
       </main>
     </div>
