--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,9 @@
     <header>
       <div class="wrapper">
         <h1>Dunmer Name Generator</h1>
+        <a href="https://github.com/BeckyPollard/uesp-dumner-name-generator" class="hexagon"
+          >View on GitHub</a
+        >
       </div>
     </header>
     <div class="wrapper">
