--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,13 @@
     <link rel="icon" href="./assets/images/favicon.ico" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="" />
-    <meta name="keywords" content="" />
+    <meta
+      name="description"
+      content="Generate sets of 10 first and last Dunmer name pairs from names present in The Elder Scrolls."
+    />
+    <meta name="keywords" content="dunmer names, " />
+    <meta name="”robots”" content="index, follow" />
+    <meta name="author" content="Becky Pollard" />
     <title>Dunmer Name Generator for The Elder Scrolls</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
@@ -24,9 +29,10 @@
     </header>
     <main class="wrapper">
       <p class="description">
-        10 first and last name pairs, created from names present in The Elder Scrolls lore. Names
-        collected from <a href="https://en.uesp.net/wiki/Lore:Dunmer_Names">UESP</a>. Last names
-        include Ashlander family names.
+        First and last name pairs, created from names present in The Elder Scrolls games. Names
+        collected from <a href="https://en.uesp.net/wiki/Lore:Dunmer_Names">UESP</a>.<span>
+          Last names include Ashlander family names.</span
+        >
       </p>
       <div class="generatedNames">
         <h2>Generated names:</h2>
