Add footer with artist's signature.

--- a/src/index.html
+++ b/src/index.html
@@ -53,5 +53,8 @@
         <button type="button" id="generateNames" class="hexagon">Re-Roll Names</button>
       </form>
     </main>
+    <footer>
+      <a href="https://github.com/BeckyPollard">Made by Becky Pollard 2020</a>
+    </footer>
   </body>
 </html>
