Improved desc p, meta info.

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,10 @@
       name="description"
       content="Generate sets of 10 first and last Dunmer name pairs from names present in The Elder Scrolls."
     />
-    <meta name="keywords" content="dunmer names, " />
+    <meta
+      name="keywords"
+      content="dunmer names, dark elf names, dunmer, dark elf, elder scrolls, the elder scrolls, morrowind, oblivion, skyrim, name generator, random names"
+    />
     <meta name="”robots”" content="index, follow" />
     <meta name="author" content="Becky Pollard" />
     <title>Dunmer Name Generator for The Elder Scrolls</title>
@@ -29,8 +32,9 @@
     </header>
     <main class="wrapper">
       <p class="description">
-        First and last name pairs, created from names present in The Elder Scrolls games. Names
-        collected from <a href="https://en.uesp.net/wiki/Lore:Dunmer_Names">UESP</a>.<span>
+        First and last Dunmer / Dark Elf name pairs, created from names present in The Elder Scrolls
+        games. Names collected from
+        <a href="https://en.uesp.net/wiki/Lore:Dunmer_Names">UESP</a>.<span>
           Last names include Ashlander family names.</span
         >
       </p>
