--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <link rel="icon" href="./assets/images/favicon.ico" />
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1" />
     <meta
       name="description"
       content="Generate sets of 10 first and last Dunmer name pairs from names present in The Elder Scrolls."
@@ -57,8 +57,8 @@
         <button type="button" id="generateNames" class="hexagon">Re-Roll Names</button>
       </form>
     </main>
-    <footer>
+    <!-- <footer>
       <a href="https://github.com/BeckyPollard">Made by Becky Pollard 2020</a>
-    </footer>
+    </footer> -->
   </body>
 </html>
