Add Twitter card meta to head.

--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,17 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
       rel="stylesheet"
     />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@Garbagemancer_" />
+    <meta name="twitter:title" content="Dunmer / Dark Elf Name Generator" />
+    <meta
+      name="twitter:description"
+      content="First and last Dunmer / Dark Elf name pairs, created from names present in The Elder Scrolls games. Names collected from UESP."
+    />
+    <meta
+      name="twitter:image"
+      content="https://raw.githubusercontent.com/BeckyPollard/dunmer-name-generator/main/preview.png"
+    />
   </head>
 
   <body>
