Use new project template

--- a/src/index.html
+++ b/src/index.html
@@ -3,73 +3,13 @@
   <head>
     <link rel="icon" href="./assets/images/favicon.ico" />
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1" />
-    <meta
-      name="description"
-      content="Generate sets of 10 first and last Dunmer name pairs from names present in The Elder Scrolls."
-    />
-    <meta
-      name="keywords"
-      content="dunmer names, dark elf names, dunmer, dark elf, elder scrolls, the elder scrolls, morrowind, oblivion, skyrim, name generator, random names"
-    />
-    <meta name="”robots”" content="index, follow" />
-    <meta name="author" content="Becky Pollard" />
-    <title>Dunmer Name Generator for The Elder Scrolls</title>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
-    <meta name="twitter:card" content="summary" />
-    <meta name="twitter:site" content="@Garbagemancer_" />
-    <meta name="twitter:title" content="Dunmer / Dark Elf Name Generator" />
-    <meta
-      name="twitter:description"
-      content="First and last Dunmer / Dark Elf name pairs, created from names present in The Elder Scrolls games. Names collected from UESP."
-    />
-    <meta
-      name="twitter:image"
-      content="https://raw.githubusercontent.com/BeckyPollard/dunmer-name-generator/main/preview.png"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="" />
+    <meta name="keywords" content="" />
+    <title>Hello World</title>
   </head>
 
   <body>
-    <header>
-      <div class="wrapper">
-        <h1>Dunmer Name Generator</h1>
-        <a href="https://github.com/BeckyPollard/uesp-dumner-name-generator" class="hexagon"
-          >View on GitHub</a
-        >
-      </div>
-    </header>
-    <main class="wrapper">
-      <p class="description">
-        First and last Dunmer / Dark Elf name pairs, created from names present in The Elder Scrolls
-        games. Names collected from
-        <a href="https://en.uesp.net/wiki/Lore:Dunmer_Names">UESP</a>.<span>
-          Last names include Ashlander family names.</span
-        >
-      </p>
-      <div class="generatedNames">
-        <h2>Generated names:</h2>
-        <ul id="names">
-          <li>Loading names... consulting the libraries of Apocrypha...</li>
-        </ul>
-      </div>
-      <form class="options">
-        <fieldset>
-          <legend>Gender:</legend>
-          <input type="radio" id="options-gender-off" name="gender" checked="true" />
-          <label for="options-gender-off">Off</label>
-          <input type="radio" id="options-gender-female" name="gender" value="female" />
-          <label for="options-gender-female">Feminine</label>
-          <input type="radio" id="options-gender-male" name="gender" value="male" />
-          <label for="options-gender-male">Masculine</label>
-        </fieldset>
-        <button type="button" id="generateNames" class="hexagon">Re-Roll Names</button>
-      </form>
-    </main>
-    <!-- <footer>
-      <a href="https://github.com/BeckyPollard">Made by Becky Pollard 2020</a>
-    </footer> -->
+    <main id='app'></main>
   </body>
 </html>
