Upgrade to a React & Typescript app

--- a/src/index.html
+++ b/src/index.html
@@ -3,13 +3,40 @@
   <head>
     <link rel="icon" href="./assets/images/favicon.ico" />
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="" />
-    <meta name="keywords" content="" />
-    <title>Hello World</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1" />
+    <!-- i dont know how to do this SEO stuff yet lol ↓ -->
+    <meta
+    name="description"
+    content="Generate sets of 10 first and last name pairs from names present in The Elder Scrolls."
+    />
+    <meta
+    name="keywords"
+    content="dunmer names, dark elf names, dunmer, dark elf, elder scrolls, the elder scrolls, morrowind, oblivion, skyrim, name generator, random names"
+    />
+    <meta name="robots" content="index, follow" />
+    <meta name="author" content="Becky Pollard" />
+    <title>Name Generator for The Elder Scrolls</title>
+    <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
+    rel="stylesheet"
+    />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@Garbagemancer_" />
+    <meta name="twitter:title" content="The Elder Scrolls Name Generator" />
+    <meta
+    name="twitter:description"
+    content="First and last name pairs, created from names present in The Elder Scrolls games. Names collected from UESP."
+    />
+    <meta
+    name="twitter:image"
+    content="https://raw.githubusercontent.com/BeckyPollard/dunmer-name-generator/main/preview.png"
+    />
+    <!-- i dont know how to do this SEO stuff yet lol ↑ -->
   </head>
 
   <body>
-    <main id='app'></main>
+    <div id='app'>
+      Enable Javascript or else... like idk... this won't work...
+    </div>
   </body>
 </html>
