--- a/src/index.html
+++ b/src/index.html
@@ -37,9 +37,8 @@
   <body style='background: #b5b5b5'>
     <div id='app'>
       <div style="font-size: 14px; font-family: sans-serif; display: flex; justify-content: center; flex-direction: column; height: calc(100vh - 20px); align-items: center; text-align: center;">
-        <img width=92 src="./assets/images/dagger.gif" style="display: block"><br>
+        <img width=92 alt='Loading' src="./assets/images/dagger.gif" style="display: block"><br>
         <p style="margin-top: 30px">LOADING</p>
-        <p style="opacity: 0.5;">Enable Javascript or else... like idk... this won't work...</p>
       </div>
     </div>
   </body>
