--- a/src/index.html
+++ b/src/index.html
@@ -34,11 +34,11 @@
     <!-- i dont know how to do this SEO stuff yet lol ↑ -->
   </head>
 
-  <body style='background: #b5b5b5'>
+  <body style='background: #000'>
     <div id='app'>
-      <div style="font-size: 14px; font-family: sans-serif; display: flex; justify-content: center; flex-direction: column; height: calc(100vh - 20px); align-items: center; text-align: center;">
+      <div style="font-size: 14px; font-family: sans-serif; display: flex; justify-content: center; flex-direction: column; height: calc(100vh); align-items: center; text-align: center;">
         <img width=92 alt='Loading' src="./assets/images/dagger.gif" style="display: block"><br>
-        <p style="margin-top: 30px">LOADING</p>
+        <p style="margin-top: 30px; color: #fff">LOADING</p>
       </div>
     </div>
   </body>
