--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
     <!-- i dont know how to do this SEO stuff yet lol ↑ -->
   </head>
 
-  <body style='background: #000'>
+  <body style='background: #dfdfdf'>
     <div id='app'>
       <div style="font-size: 14px; font-family: sans-serif; display: flex; justify-content: center; flex-direction: column; height: calc(100vh); align-items: center; text-align: center;">
         <img width=92 alt='Loading' src="./assets/images/dagger.gif" style="display: block"><br>
